Fixed footer spacing, consolidated css
Made all anchor elements white and hovers #ddd with no text-decoration.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@ body, html {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
+  overflow-x: hidden;
+}
+
+a, a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+a:hover {
+  color: #ddd;
 }
 
 h1 { font-size: 500%; }
@@ -25,21 +35,19 @@ header {
 }
 
 .logo a {
-  display: inline-block;
+  /* display: inline-block; */
   /* float: left; */
-  text-decoration: none;
   color: #fff;
 }
 
 .logo a:hover {
   color: #ddd;
-  text-decoration: none;
 }
 
 
 #menu {
-  display: inline-block;
-  float: right;
+  /* display: inline-block; */
+  /* float: right; */
   bottom: -40px;
   color: white;
 }
@@ -77,7 +85,6 @@ header {
 }
 
 .hero-text button:hover {
-  /* background-color: #555; */
   background: none;
   color: #fff;
 }
@@ -138,7 +145,6 @@ footer .logo a {
 
 footer .logo a:hover {
   color: #666;
-  text-decoration: none;
 }
 
 #menu-footer {
@@ -153,10 +159,10 @@ footer .logo a:hover {
 }
 
 .social {
-  display: inline-block;
+  display: block;
   width: 50px;
   height: 50px;
-  margin: 30px 0;
+  margin: 30px auto;
   background-image: url('social-icons.jpg');
   background-size: 1000%;
 }
